syntax = "proto3";

package localgrpcproto;
option go_package = "/localgrpcproto;localgrpcproto";

enum ClientType {
  CLI = 0;
  VM = 1;
  API = 2;
}

enum ClientMethode {
  SYSTEM = 0;
  USER = 1;
}

message VMClientRegisterRequest {
  bytes manifest = 1;
  bytes signature = 2;
  string scriptHash = 3;
  string process_id = 4;
  string kid = 5;
}

message VMClientRegisterResponse {
  string vmid = 1;
}

message ClientWelcomeRequest {
  uint64 version = 1;
  ClientType client_type = 2;
  ClientMethode client_methode = 3;
}

message ServerWelcomeResponse {
  uint64 version = 1;
  string process_id = 2;
  bool accepted = 3;
  string reason = 4;
}

message ProcessTransport {
  oneof Request {
    ClientWelcomeRequest welcomeRequest = 1;
  }
  oneof Respone {
    ServerWelcomeResponse welcomeResponse = 2;
  }
}

message VmInstanceTransport {
  oneof Request {
    VMClientRegisterRequest register_vm_request = 1;
  }
  oneof Response {
    VMClientRegisterResponse register_vm_response = 2;
  }
}

service LocalhostAPIService {
  // Wird verwendet um einen Prozess zu Registrieren und offen zu halten
  rpc SpawnProcess (stream ProcessTransport) returns (stream ProcessTransport);

  // Wird verwendet um eine VM Instantz zu registrieren
  rpc RegisterAndLinkVmInstanceStream (stream VmInstanceTransport) returns (stream VmInstanceTransport);
}
